latest update of productService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://oye5.cc3jrqpfz5d2.us-west-2.rds.amazonaws.com:3306/oye5
+jdbc.url=jdbc:mysql://oye5rds.cn5pwoiyeyi8.ap-south-1.rds.amazonaws.com:3306/oye5
+#jdbc.url=jdbc:mysql://oye5.cc3jrqpfz5d2.us-west-2.rds.amazonaws.com:3306
 jdbc.username=root
 jdbc.password=oye5root
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
